Closed Bug 1835631 Opened 11 months ago Closed 11 months ago

Gnome shell search is broken

Categories

(Firefox :: Shell Integration, defect, P3)

defect

Tracking

()

RESOLVED FIXED
115 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox113 --- wontfix
firefox114 --- fixed
firefox115 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Gnome shell search is broken due to wrong array size passed to ConstructCommandLine().

Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/8c49ddd76cee
[Linux] Pass correct array size to ConstructCommandLine() r=emilio

Set release status flags based on info from the regressing bug 1804659

Status: NEW → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch

The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox114 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(stransky)

Comment on attachment 9336389 [details]
Bug 1835631 [Linux] Pass correct array size to ConstructCommandLine() r?emilio

Beta/Release Uplift Approval Request

  • User impact if declined: Gnome shell search provider is broken.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We pass correct argument num to Firefox command line component so search works as before.
  • String changes made/needed:
  • Is Android affected?: No
Flags: needinfo?(stransky)
Attachment #9336389 - Flags: approval-mozilla-beta?

Comment on attachment 9336389 [details]
Bug 1835631 [Linux] Pass correct array size to ConstructCommandLine() r?emilio

Changing to a release request as we are no linger in beta.

Attachment #9336389 - Flags: approval-mozilla-beta? → approval-mozilla-release?

Comment on attachment 9336389 [details]
Bug 1835631 [Linux] Pass correct array size to ConstructCommandLine() r?emilio

Functional regression, approved as a ride-along for 114 RC 2, thanks.

Attachment #9336389 - Flags: approval-mozilla-release? → approval-mozilla-release+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: