Bug 1835631 [Linux] Pass correct array size to ConstructCommandLine() r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D179354